Added ThankYou Page with summary of survey inputs.

--- a/Comp229-Assign02/Content/Assign02.css
+++ b/Comp229-Assign02/Content/Assign02.css
@@ -29,6 +29,12 @@ Creation Date: 2016-11-01*/
     color:black;
 }   
 
-.NameText {
-
+.NameTextBox {
+    margin-bottom:20px;
+   }
+.EmailTextBox{
+   margin-bottom:20px;
+}
+.PhoneNumberTxt{
+    margin-bottom:20px;
 }
